--- a/frontend/src/styles/tour-details.css
+++ b/frontend/src/styles/tour-details.css
@@ -55,6 +55,30 @@
     cursor: pointer;
 }
 
+.rating__group span:hover {
+    color:blue;
+}
+
+.rating__group span:after {
+    content: "";
+    background: #90EE90;
+    display: block;
+    position: absolute;
+    padding-top: 20px;
+    padding-left: 20px;
+    margin-left: -1px !important;
+    margin-top: 20px;
+    opacity: 0;
+    transition: all 0.8s
+}
+
+.rating__group span:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+}
+
 .tour__reviews h4 {
     margin-bottom: 3rem;
 }
